# printagram

./: LICENSE  README.md  instagram_accounts_template.json  printagram.service  pyproject.toml
case/: Bracket.3dm  Bracket.stl  SnapConnectorHolder.stl  Transformer_holder.stl
printagram/: main.py
